--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-countup": "^6.4.2",
