--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,5 @@
   NODE_VERSION = "18"          # Use a Node.js version compatible with your project
   CI = "false"                 # Prevents warnings being treated as errors in Netlify
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  force = true                 # Ensures all routes are handled by React (SPA routing)
+[functions]
+ directory = "netlify/funtions"
