--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 EMAIL_USER=hrishikaverma2@gmail.com
 EMAIL_PASS=tlcw mkhi dczf cabs
 RECIPIENT_EMAIL=hrishikaverma71@gmail.com
-MONGODB_URI= mongodb+srv://hrishikaverma71:Y7uFYEnlBcozyY7h@cluster0.x8ayp.mongodb.net/
+MONGODB_URI=mongodb+srv://hrishikaverma71:Y7uFYEnlBcozyY7h@cluster0.x8ayp.mongodb.net/interiorvaastu?retryWrites=true&w=majority
