--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
